Adding more to Java notebooks while studying them.

--- a/java/Classes.ipynb
+++ b/java/Classes.ipynb
@@ -218,7 +218,7 @@
     "1. `public`: The public access modifier allows the class, variable, or method to be accessed from anywhere.\n",
     "2. `private`: The private access modifier restricts the access to within the same class. It cannot be accessed from outside the class.\n",
     "3. `protected`: The protected access modifier allows the class, variable, or method to be accessed within the same package or by a subclass in a different package.\n",
-    "4. Default (package-private): If no access modifier is specified, it is considered as default (package-private). It allows the class, variable, or method to be accessed within the same package.\n",
+    "4. Default (package-private): If no access modifier is specified, it is considered as default (package-private). It allows the class, variable, or method to be accessed within the same package.  (Exception: interface members default to public)\n",
     "\n",
     "In the code snippet above, we have a class `AccessModifiersDemo` that demonstrates the usage of access modifiers. It has variables and methods with different access modifiers. The `AnotherClass` is another class in the same package that demonstrates the access to these variables and methods.\n",
     "\n",
@@ -1528,12 +1528,16 @@
     "\n",
     "In example 1, we create an anonymous class that extends the `ParentClass`. Inside the anonymous class, we override the `display()` method to provide our own implementation. We then create an object of the anonymous class and call the `display()` method. As a result, the overridden method in the anonymous class is executed, printing \"Inside AnonymousClass\" to the console.\n",
     "\n",
-    "In example 2, we create an anonymous class that implements the `MyInterface` interface. Inside the anonymous class, we provide an implementation for the `display()` method. We then create an object of the anonymous class and call the `display()` method. As a result, the implemented method in the anonymous class is executed, printing \"Inside AnonymousClass\" to the console."
+    "In example 2, we create an anonymous class that implements the `MyInterface` interface. Inside the anonymous class, we provide an implementation for the `display()` method. We then create an object of the anonymous class and call the `display()` method. As a result, the implemented method in the anonymous class is executed, printing \"Inside AnonymousClass\" to the console.\n",
+    "\n",
+    "__Restrictions__:\n",
+    "- since no name, __no constructor__ (can use {} blocks instead)\n",
+    "- no way to specify multiple interfaces or an interface + a class"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 95,
    "id": "acdbc35d",
    "metadata": {},
    "outputs": [
@@ -1543,7 +1547,8 @@
      "text": [
       "Inside AnonymousClass\n",
       "Inside AnonymousClass\n",
-      "Inside AnonymousClass\n"
+      "Inside AnonymousClass\n",
+      "Inside ParentClass\n"
      ]
     }
    ],
@@ -1600,10 +1605,24 @@
     "        // Output: Inside AnonymousClass\n",
     "    }\n",
     "    \n",
+    "    public static void example4() {\n",
+    "        // Creating an anonymous class with construction logic\n",
+    "        ParentClass obj = new ParentClass() {{\n",
+    "            // the outer {} makes the anonymous class\n",
+    "            // the inner {} is an initializer block\n",
+    "            // NOTE: the base class (ParentClass) is constructed\n",
+    "            // before the anonymous class, so it's safe to call\n",
+    "            // and use anything in there.\n",
+    "            display();\n",
+    "        }};\n",
+    "        // Output: Inside ParentClass\n",
+    "    }\n",
+    "    \n",
     "    public static void main(String[] args) {\n",
     "        example1();\n",
     "        example2();\n",
     "        example3();\n",
+    "        example4();\n",
     "    }\n",
     "}\n",
     "\n",
@@ -1614,6 +1633,264 @@
    "cell_type": "markdown",
    "id": "066203bd",
    "metadata": {},
+   "source": [
+    "# More Complex Interfaces\n",
+    "\n",
+    "- interface methods are `public` and `abstract` by default\n",
+    "    - you cannot change the visibility or give implementation\n",
+    "    - classes must still mark the overridden things as `public`\n",
+    "- interface variables are `public`, `static`, and `final`\n",
+    "    - an implementing class ignores them\n",
+    "- interface methods can be `static` and have implementation\n",
+    "    - an implementing class ignores them\n",
+    "- interface methods can be `default` and have implementation\n",
+    "    - the implementing class can ignore or override them\n",
+    "- interface methods can be `private` and have implementation\n",
+    "    - this is only to be called by `static` or `default` methods\n",
+    "    \n",
+    "Do default methods make an interface into an ABC (abstract base class)?  Not quite!  Because an interface has __no variables__. However, it can be a way to get around the multiple inheritance limitation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "17eeb251",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "static method\n",
+      "default method\n",
+      "overridden!\n",
+      "100\n"
+     ]
+    }
+   ],
+   "source": [
+    "interface MyInterface {\n",
+    "    // automatically public static final (and can't be changed)\n",
+    "    int MY_CONSTANT = 100;\n",
+    "    \n",
+    "    public int f(); // Legal, but already implied\n",
+    "    int g();        // implied public\n",
+    "    // private int h(); // Illegal to be anything but public\n",
+    "    \n",
+    "    // Works just like in a class (and public automatically)\n",
+    "    // A lot of built-in interfaces use this (eg. List.of())\n",
+    "    static void doSomeStuff() {\n",
+    "        System.out.println(\"static method\");\n",
+    "    }\n",
+    "    \n",
+    "    default void doSomeOtherStuff() {\n",
+    "        System.out.println(\"default method\");\n",
+    "    }\n",
+    "    \n",
+    "    default void doSomeOverriddenStuff() {\n",
+    "        System.out.println(\"default method 2\");\n",
+    "    }\n",
+    "    \n",
+    "    // This is legal (and the static version too).\n",
+    "    // The reason is in case you need to call some code from\n",
+    "    // a 'default' or 'static' method.\n",
+    "    private void privateMethod() {\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class MyClass implements MyInterface {\n",
+    "    // NOTE: I should be using @Override on all these\n",
+    "    \n",
+    "    public int f() {return 0;}\n",
+    "    // Has to be declared public to match the interface\n",
+    "    public int g() {return 0;}\n",
+    "    \n",
+    "    // NOTE: the static stuff doesn't go in here\n",
+    "    \n",
+    "    // NOTE: we left out the default method doSomeOtherStuff\n",
+    "    \n",
+    "    public void doSomeOverriddenStuff() {\n",
+    "        System.out.println(\"overridden!\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class InterfacesDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        MyInterface.doSomeStuff(); // Expected Output: static method\n",
+    "        \n",
+    "        MyInterface i1 = new MyClass();\n",
+    "        // Can call the default method even though we didn't implement it\n",
+    "        i1.doSomeOtherStuff();\n",
+    "        // This default method is overridden, as if an abstract base class\n",
+    "        i1.doSomeOverriddenStuff();\n",
+    "        \n",
+    "        System.out.println(MyInterface.MY_CONSTANT);\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "InterfacesDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d54ab2a8",
+   "metadata": {},
+   "source": [
+    "# Final Methods\n",
+    "\n",
+    "This is like sealed in C#."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "464ef584",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MyClass {\n",
+    "    void f() {}\n",
+    "    final void g() {}\n",
+    "}\n",
+    "\n",
+    "class MySubClass extends MyClass {\n",
+    "    void f() {}\n",
+    "    // void g() {}  // Error: marked final in base class\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6eeb3ef1",
+   "metadata": {},
+   "source": [
+    "# Final Classes\n",
+    "\n",
+    "You can prevent inheriting from a whole class."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "498ebbae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final class MyClass {\n",
+    "}\n",
+    "\n",
+    "// class MySubclass extends MyClass {} // Error"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fe1c7303",
+   "metadata": {},
+   "source": [
+    "# Construction Order Deep Dive\n",
+    "\n",
+    "You can see the nitty gritty details in the output, but here are some summarizing principles:\n",
+    "- static is one-time and instance is for each instance created\n",
+    "- all {} and inline variable initializations in a class are run in order before the c'tor body\n",
+    "    - {} can only access variables initialized/declared before them\n",
+    "- even when you call `super()` from inside the c'tor, the whole base class is constructed before anything runs in the derived class\n",
+    "- the call to `super()` has to be the first thing in the constructor body if present\n",
+    "    - it actually ends up being where the whole base class construction is kicked off, not just the calling of the method\n",
+    "    - you can only access instance members after the super() call (not in it)\n",
+    "    - when you don't explicitly call `super()`, you can imagine there is a phantom one there which is what constructs the base\n",
+    "    - so then all the {} and = are run after `super()` and before the rest of the c'tor body!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "39eb4fba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DerivedClass static {}\n",
+      "BaseClass instance variable\n",
+      "BaseClass {}\n",
+      "BaseClass {}: s: hi\n",
+      "BaseClass {} 2\n",
+      "BaseClass instance variable\n",
+      "BaseClass c'tor body: 0\n",
+      "DerivedClass {}\n",
+      "DerivedClass c'tor body: x: 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "class BaseClass {\n",
+    "    String s = someMethod();\n",
+    "    \n",
+    "    {\n",
+    "        System.out.println(\"BaseClass {}\");\n",
+    "        System.out.println(\"BaseClass {}: s: \" + s);\n",
+    "    }\n",
+    "    \n",
+    "    BaseClass(int x) {\n",
+    "        System.out.println(\"BaseClass c'tor body: \" + x);\n",
+    "    }\n",
+    "    \n",
+    "    {\n",
+    "        System.out.println(\"BaseClass {} 2\");\n",
+    "    }\n",
+    "    \n",
+    "    String someMethod() {\n",
+    "        System.out.println(\"BaseClass instance variable\");\n",
+    "        return \"hi\";\n",
+    "    }\n",
+    "    \n",
+    "    // This is called after the {}.\n",
+    "    // The {} cannot reference it.\n",
+    "    String t = someMethod();\n",
+    "    \n",
+    "    static {\n",
+    "        System.out.println(\"BaseClass static {}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class DerivedClass extends BaseClass {\n",
+    "    int x = 5;\n",
+    "    \n",
+    "    static {\n",
+    "        System.out.println(\"DerivedClass static {}\");\n",
+    "    }\n",
+    "    \n",
+    "    {\n",
+    "        System.out.println(\"DerivedClass {}\");\n",
+    "    }\n",
+    "    \n",
+    "    DerivedClass() {\n",
+    "        //super(x); // Error: can't access members until after the super()\n",
+    "        super(0);\n",
+    "        \n",
+    "        // OK to access members now\n",
+    "        System.out.println(\"DerivedClass c'tor body: x: \" + x);\n",
+    "        \n",
+    "        // super(); // Illegal - must come first\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class ConstructionOrderDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        DerivedClass d = new DerivedClass();\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "ConstructionOrderDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8efd3de",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
