--- a/java/Functional Programming.ipynb
+++ b/java/Functional Programming.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "id": "15883448",
    "metadata": {},
    "outputs": [
@@ -32,6 +32,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "25\n",
       "25\n",
       "7\n",
       "Hello, Lambda!\n",
@@ -54,11 +55,22 @@
     "import java.util.function.Predicate;\n",
     "\n",
     "public class LambdasDemo {\n",
+    "    interface MyFunction {\n",
+    "        int square(int val);\n",
+    "    }\n",
+    "    \n",
     "    public static void main(String[] args) {\n",
     "        // Example 1: Lambda expression as an anonymous function\n",
+    "        // NOTE: if you use a generic functional interface, youl'll\n",
+    "        //       be limited to BOXED TYPES\n",
     "        Function<Integer, Integer> square = (Integer x) -> x * x;\n",
     "        System.out.println(square.apply(5)); // Expected output: 25\n",
     "\n",
+    "        // Example 1b: demonstrating that primitives are ok as long\n",
+    "        //             as no generics are involved\n",
+    "        MyFunction square2 = (int x) -> x * x;\n",
+    "        System.out.println(square2.square(5)); // Expected output: 25\n",
+    "        \n",
     "        // Example 2: Lambda expression with multiple parameters\n",
     "        BiFunction<Integer, Integer, Integer> add = (x, y) -> x + y;\n",
     "        System.out.println(add.apply(3, 4)); // Expected output: 7\n",
@@ -350,7 +362,9 @@
     "\n",
     "In Example 3, we demonstrate returning an object with method chaining. The lambda expression takes a string as input, creates a new `Person` object with the given name, sets the age of the person using the `age` method, and returns the `Person` object. We apply the lambda expression to the name \"Alice\" and store the returned `Person` object in the `personWithAge` variable. We then print both the name and age of the `personWithAge` object.\n",
     "\n",
-    "Lambda expressions provide a concise way to define functions and return objects in Java, making functional programming more expressive and readable."
+    "Lambda expressions provide a concise way to define functions and return objects in Java, making functional programming more expressive and readable.\n",
+    "\n",
+    "Note: I included this in the AI generated snippets because in TypeScript returning an object is challenging due to structural typing syntax, but that doesn't apply here.  I still kept the snippet because it demonstrating some interesting stuff to see from time to time."
    ]
   },
   {
@@ -425,9 +439,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "eb46d83d",
+   "metadata": {},
+   "source": [
+    "# Generality of Streams\n",
+    "\n",
+    "Note that the streams API is most famously used for functional stuff but is not exclusive to that purpose.  It is in java.util and is used in other places like file I/O as well!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "719c66c0",
+   "metadata": {},
+   "source": [
+    "# Type Inference with Lambdas\n",
+    "\n",
+    "You __cannot__ use `var` with lambda variables because of the way lambda types are done in Java.  Since it must be a functional inteface with a method, inference doesn't make any sense."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a89c8532",
+   "metadata": {},
+   "source": [
+    "# Custom Collector\n",
+    "\n",
+    "You can implement your own collector by implementing the `Collector<>` interface, which is long and complex."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9f2c870",
+   "id": "79651924",
    "metadata": {},
    "outputs": [],
    "source": []
