--- a/java/Functions.ipynb
+++ b/java/Functions.ipynb
@@ -259,7 +259,7 @@
    "metadata": {},
    "source": [
     "# Variadic Functions\n",
-    "In Java, a variadic function is a function that can accept a variable number of arguments of the same type. The ellipsis (`...`) notation is used to denote a variadic parameter in the function signature.\n",
+    "In Java, a variadic function is a function that can accept a variable number of arguments of the same type. The ellipsis (`...`) notation is used to denote a variadic parameter in the function signature. The parameter can be treated as either an array or as multiple arguments.\n",
     "\n",
     "In the code snippet, we have defined two variadic functions: `sum` and `concatenate`. The `sum` function takes a variable number of integers and returns their sum. The `concatenate` function takes a variable number of strings and concatenates them into a single string.\n",
     "\n",
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "id": "78c2d47e",
    "metadata": {},
    "outputs": [
@@ -282,6 +282,7 @@
      "text": [
       "Sum: 15\n",
       "Sum: 30\n",
+      "Sum: 110\n",
       "Concatenated String: Hello World\n",
       "Concatenated String: Java is awesome\n"
      ]
@@ -315,6 +316,9 @@
     "\n",
     "        int sum2 = sum(10, 20);\n",
     "        System.out.println(\"Sum: \" + sum2); // Expected output: Sum: 30\n",
+    "        \n",
+    "        int sum3 = sum(new int[]{100, 10});\n",
+    "        System.out.println(\"Sum: \" + sum3); // Expected output: Sum: 110\n",
     "\n",
     "        // Example usage of the concatenate function\n",
     "        String str1 = concatenate(\"Hello\", \" \", \"World\");\n",
@@ -687,6 +691,60 @@
     "# Extension Methods\n",
     "__Not supported__ by Java."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "abfbe421",
+   "metadata": {},
+   "source": [
+    "# Exceptions\n",
+    "\n",
+    "You only __have to specify checked exceptions__, but you can specify unchecked ones if you want as well."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "3625c70e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "public class ExceptionDemo {\n",
+    "    public void readFromFile(String filename) throws IOException {\n",
+    "        // ... code that might throw an IOException\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "92271ac0",
+   "metadata": {},
+   "source": [
+    "# Recursion\n",
+    "\n",
+    "In Java, you recurse by having the method __call itself by name__.\n",
+    "\n",
+    "Note: Java has __no TCO (Tail Call Optimization)__ because it would ruin stack traces for debugging."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e877ae5c",
+   "metadata": {},
+   "source": [
+    "# Trailing Commas\n",
+    "\n",
+    "__not allowed__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "119e086c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
