--- a/java/Generics, Templates.ipynb
+++ b/java/Generics, Templates.ipynb
@@ -595,9 +595,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "64be3d33",
+   "metadata": {},
+   "source": [
+    "# Diamond Operator\n",
+    "\n",
+    "`List<Integer> l = new ArrayList<>();`\n",
+    "- empty <> on right side of equality lets type be inferred\n",
+    "- even though the generic is not exactly the same on both sides"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "afef1f6a",
+   "metadata": {},
+   "source": [
+    "# Array as Type Arg\n",
+    "\n",
+    "__allowed__ (though weird)\n",
+    "Even __arrays of primitives__ are allowed!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "bead74af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import java.util.List;\n",
+    "import java.util.ArrayList;\n",
+    "\n",
+    "public class OverloadGenerics {\n",
+    "    public static void main(String[] args) {\n",
+    "        List<Integer[]> l = new ArrayList<>();\n",
+    "        List<int[]> l2 = new ArrayList<>();\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "OverloadGenerics.main(null);"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64d0ef6a",
+   "id": "9dbca833",
    "metadata": {},
    "outputs": [],
    "source": []
