--- a/java/Modules, Packages, Imports.ipynb
+++ b/java/Modules, Packages, Imports.ipynb
@@ -369,6 +369,7 @@
     "- But you can only have __1 public__ top-level class in a file\n",
     "    - the rest must be default (package) visibility\n",
     "- The public class must have the __same name as the .java file__\n",
+    "    - if no public class, you can name the file anything\n",
     "- It is ok for the classes in the same file to refer to each other regardless of declaration order"
    ]
   },
