--- a/java/Standard library.ipynb
+++ b/java/Standard library.ipynb
@@ -177,29 +177,18 @@
    "metadata": {},
    "source": [
     "# File I/O\n",
-    "Summary:\n",
-    "This code snippet demonstrates the File I/O subtopic of the Standard Library in Java. It covers creating a new file, writing data to the file, reading data from the file, and deleting the file.\n",
     "\n",
-    "The code starts by checking if the file already exists. If it does, it prints a message indicating that the file already exists. Otherwise, it creates a new file using the `createNewFile()` method and prints a success message.\n",
+    "There are __many different ways__ to do file I/O in Java introduced at different times and having different tweaks over time.  `nio` stands for _New I/O_, but it's quite old as well.\n",
     "\n",
-    "Next, it writes the string \"Hello, World!\" to the file using a `FileWriter` and closes the writer.\n",
-    "\n",
-    "Then, it reads the content of the file character by character using a `FileReader` and appends each character to a `StringBuilder`. The content is then printed.\n",
-    "\n",
-    "Finally, it attempts to delete the file using the `delete()` method and prints a success or failure message accordingly.\n",
-    "\n",
-    "Expected output:\n",
-    "```\n",
-    "File created successfully.\n",
-    "Data written to the file.\n",
-    "Data read from the file: Hello, World!\n",
-    "File deleted successfully.\n",
-    "```"
+    "1. `BufferedWriter` directly writes text to a file.\n",
+    "1. `BufferedReader` has various ways to read, one of which is a stream of lines that you can itereate functionally.\n",
+    "1. `OutputStream` is similiar but for binary.\n",
+    "1. `InputStream` is similar but for binary."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "ed662f37",
    "metadata": {},
    "outputs": [
@@ -207,64 +196,63 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File created successfully.\n",
-      "Data written to the file.\n",
-      "Data read from the file: Hello, World!\n",
-      "File deleted successfully.\n"
+      "Hello, World!\n",
+      "[1, 2, 3]\n"
      ]
     }
    ],
    "source": [
-    "import java.io.File;\n",
-    "import java.io.FileReader;\n",
-    "import java.io.FileWriter;\n",
-    "import java.io.IOException;\n",
+    "import java.nio.file.Files;\n",
+    "import java.nio.file.Paths;\n",
+    "import java.io.BufferedReader;\n",
+    "import java.io.BufferedWriter;\n",
+    "import java.io.OutputStream;\n",
+    "import java.io.InputStream;\n",
     "\n",
-    "public class FileIODemo {\n",
-    "\n",
-    "    public static void main(String[] args) {\n",
-    "        // Create a new file\n",
-    "        File file = new File(\"example.txt\");\n",
-    "\n",
-    "        try {\n",
-    "            // Check if the file exists\n",
-    "            if (file.exists()) {\n",
-    "                System.out.println(\"File already exists.\");\n",
-    "            } else {\n",
-    "                // Create a new file\n",
-    "                file.createNewFile();\n",
-    "                System.out.println(\"File created successfully.\");\n",
-    "            }\n",
-    "\n",
-    "            // Write data to the file\n",
-    "            FileWriter writer = new FileWriter(file);\n",
+    "public class FileExample {\n",
+    "    public static void writeText() {\n",
+    "        try (BufferedWriter writer = Files.newBufferedWriter(Paths.get(\"output.txt\"))) {\n",
     "            writer.write(\"Hello, World!\");\n",
-    "            writer.close();\n",
-    "            System.out.println(\"Data written to the file.\");\n",
-    "\n",
-    "            // Read data from the file\n",
-    "            FileReader reader = new FileReader(file);\n",
-    "            int character;\n",
-    "            StringBuilder content = new StringBuilder();\n",
-    "            while ((character = reader.read()) != -1) {\n",
-    "                content.append((char) character);\n",
-    "            }\n",
-    "            reader.close();\n",
-    "            System.out.println(\"Data read from the file: \" + content.toString());\n",
-    "\n",
-    "            // Delete the file\n",
-    "            if (file.delete()) {\n",
-    "                System.out.println(\"File deleted successfully.\");\n",
-    "            } else {\n",
-    "                System.out.println(\"Failed to delete the file.\");\n",
-    "            }\n",
     "        } catch (IOException e) {\n",
-    "            System.out.println(\"An error occurred: \" + e.getMessage());\n",
+    "            e.printStackTrace();\n",
     "        }\n",
+    "    }\n",
+    "    \n",
+    "    public static void readText() {\n",
+    "        try (BufferedReader reader = Files.newBufferedReader(Paths.get(\"output.txt\"))) {\n",
+    "            reader.lines().forEach(System.out::println);\n",
+    "        } catch (IOException e) {\n",
+    "            e.printStackTrace();\n",
+    "        }\n",
+    "    }\n",
+    "    \n",
+    "    public static void writeBinary() {\n",
+    "        byte[] dataToWrite = {1, 2, 3};\n",
+    "        try (OutputStream out = Files.newOutputStream(Paths.get(\"output.bin\"))) {\n",
+    "            out.write(dataToWrite);\n",
+    "        } catch (IOException e) {\n",
+    "            e.printStackTrace();\n",
+    "        }\n",
+    "    }\n",
+    "    \n",
+    "    public static void readBinary() {\n",
+    "        try (InputStream in = Files.newInputStream(Paths.get(\"output.bin\"))) {\n",
+    "            byte[] fileContent = in.readAllBytes();\n",
+    "            System.out.println(Arrays.toString(fileContent));\n",
+    "        } catch (IOException e) {\n",
+    "            e.printStackTrace();\n",
+    "        }\n",
+    "    }\n",
+    "    \n",
+    "    public static void main(String[] args) {\n",
+    "        writeText();\n",
+    "        readText();\n",
+    "        writeBinary();\n",
+    "        readBinary();\n",
     "    }\n",
     "}\n",
     "\n",
-    "FileIODemo.main(null);"
+    "FileExample.main(null);"
    ]
   },
   {
