--- a/java/Strings and Printing.ipynb
+++ b/java/Strings and Printing.ipynb
@@ -1122,9 +1122,66 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3c517b50",
+   "metadata": {},
+   "source": [
+    "# Character as Number\n",
+    "\n",
+    "1. Doing math on the char converts it to a number (_UTF-8_, which is a _superset of ASCII_).\n",
+    "1. You can cast it back easily.\n",
+    "\n",
+    "Note: for codepoints with multiple positions, they are actually multiple chars."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "ebe79450",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class CharacterNumberDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        char c = 'h';\n",
+    "        System.out.println((char)(c + 1));\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "CharacterNumberDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d99de29d",
+   "metadata": {},
+   "source": [
+    "# Comments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "2cee14f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "// line comment\n",
+    "/* block comment */"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c9994df",
+   "id": "d60dad8a",
    "metadata": {},
    "outputs": [],
    "source": []
