--- a/java/Variables.ipynb
+++ b/java/Variables.ipynb
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db180229",
+   "id": "948659af",
    "metadata": {},
    "source": [
     "# Signed vs. Unsigned\n",
@@ -324,7 +324,9 @@
     "\n",
     "Constants can be used in expressions, conditional statements, loops, method parameters, and as return values. We demonstrate these usages in the code snippet.\n",
     "\n",
-    "The code snippet also includes print statements to demonstrate the expected output of each operation."
+    "The code snippet also includes print statements to demonstrate the expected output of each operation.\n",
+    "\n",
+    "Note: `final` only affects the __reference__, not the object being referenced. So it only locks what object the variable refers to, but does not make the object itself immutable. For value types that is equivalent, but for collections, it matters a lot."
    ]
   },
   {
@@ -885,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 55,
    "id": "aa4fb670",
    "metadata": {
     "vscode": {
@@ -935,7 +937,9 @@
     "        System.out.println(\"str3: \" + str3); // Output: str3: World\n",
     "\n",
     "        // Modifying the value of a mutable object\n",
-    "        StringBuilder sb = new StringBuilder(\"Java\");\n",
+    "        // Notice that marking the variable 'final' had no effect here\n",
+    "        // because that only affects the reference and not the object!\n",
+    "        final StringBuilder sb = new StringBuilder(\"Java\");\n",
     "        System.out.println(\"sb before: \" + sb); // Output: sb before: Java\n",
     "        sb.append(\" is awesome!\");\n",
     "        System.out.println(\"sb after: \" + sb); // Output: sb after: Java is awesome!\n",
@@ -1216,6 +1220,7 @@
     "        System.out.println(\"Explicit Casting: \" + num4); // Expected output: 15\n",
     "\n",
     "        // Coercion\n",
+    "        // NOTE: this only gets coerced after the floor truncation.\n",
     "        int num5 = 5;\n",
     "        int num6 = 2;\n",
     "        double result = num5 / num6; // Coercion: int division\n",
@@ -1948,14 +1953,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4dfd37b8",
+   "metadata": {},
+   "source": [
+    "# Delayed Initialization"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "70acd2f8",
    "metadata": {
     "vscode": {
      "languageId": "java"
     }
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class UninitDemo {\n",
+    "    static int f() { return 10; }\n",
+    "    \n",
+    "    public static void main(String[] args) {\n",
+    "        int x;\n",
+    "        \n",
+    "        // System.out.println(x); // Error\n",
+    "        int y = f();\n",
+    "        if (y == 0) {\n",
+    "            x = 0;\n",
+    "        }\n",
+    "        else {\n",
+    "            x = 1;\n",
+    "        }\n",
+    "        \n",
+    "        // OK\n",
+    "        System.out.println(x);\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "UninitDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e3ded96",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
