Updating class notes for private member cross-access.

--- a/java/Classes.ipynb
+++ b/java/Classes.ipynb
@@ -1886,9 +1886,76 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e266977e",
+   "metadata": {},
+   "source": [
+    "# Private Member Cross-Access\n",
+    "\n",
+    "Just like in C++, instances __can access each others'__ private data.\n",
+    "\n",
+    "Personal Note: this is the __we are all robots__ scenario from C++ class in college."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "7ed673e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n.x before m changes it: 10\n",
+      "n.x after m changes it: 100\n"
+     ]
+    }
+   ],
+   "source": [
+    "class MyClass {\n",
+    "    private int x = 10;\n",
+    "    \n",
+    "    void changeOther(MyClass other) {\n",
+    "        other.x = 100;\n",
+    "    }\n",
+    "    \n",
+    "    int getX() {\n",
+    "        return x;\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class PrivateMemberDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        var m = new MyClass();\n",
+    "        var n = new MyClass();\n",
+    "        \n",
+    "        System.out.println(\"n.x before m changes it: \" + n.getX());\n",
+    "        m.changeOther(n);\n",
+    "        \n",
+    "        System.out.println(\"n.x after m changes it: \" + n.getX());\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "PrivateMemberDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e559ed81",
+   "metadata": {},
+   "source": [
+    "# Friend Classes (equivalents)\n",
+    "\n",
+    "There is __no friend class__ concept directly like in C++, but the following things can do similar or identical things to that:\n",
+    "- __nested classes__ - if not static, then they are constructed underneath an instance of the parent class and access all the members\n",
+    "- __default visibility__ - if not specified private explicitly, then other classes in the package can access it, but it's still not visible from subclasses or other classes outside the package"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8efd3de",
+   "id": "b88bc4ae",
    "metadata": {},
    "outputs": [],
    "source": []
