Quick tweaks while studying.

--- a/java/Effective Java (3rd, 2017).ipynb
+++ b/java/Effective Java (3rd, 2017).ipynb
@@ -92,8 +92,8 @@
     "58. Prefer for-each loops to traditional `for` loops.\n",
     "59. Know and use the libraries.\n",
     "60. Avoid `float` and `double` if exact answers are required.\n",
-    "61. Avoid strings where other types are more appropriate.\n",
-    "62. Beware the performance of string concatenation.\n",
+    "61. Prefer primitive types to boxed primitives.\n",
+    "62. Avoid strings where other types are more appropriate.\n",
     "63. Beware the performance of string concatenation.\n",
     "64. Refer to objects by their interfaces.\n",
     "65. Prefer interfaces to reflection.\n",
