--- a/java/Collections.ipynb
+++ b/java/Collections.ipynb
@@ -1904,9 +1904,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "67a56510",
+   "metadata": {},
+   "source": [
+    "# Extending\n",
+    "\n",
+    "You can extend built-in collections because they're not marked final!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4cd6572d",
+   "id": "63027a12",
    "metadata": {},
    "outputs": [],
    "source": []
