--- a/java/Modules, Packages, Imports.ipynb
+++ b/java/Modules, Packages, Imports.ipynb
@@ -388,9 +388,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7477f9b1",
+   "metadata": {},
+   "source": [
+    "# Fully-Qualified Symbol Usages Without Importing First\n",
+    "\n",
+    "Unlike in Python, you do not have to import to use something - that is only to use it with its unqualified name.  Anything that could have been imported can be used by using its fully qualified name.\n",
+    "\n",
+    "This is a good way to deal with __name conflicts__."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "d900c44c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "public class FullyQualified {\n",
+    "    public static void main() {\n",
+    "        java.util.stream.Stream<Integer> stream;\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb33c3a5",
+   "id": "538f272a",
    "metadata": {},
    "outputs": [],
    "source": []
